cmake_minimum_required(VERSION 3.21)
project(cpplearn)

set(CMAKE_CXX_STANDARD 11)
add_executable(cpplearn main.cpp headers/learn/learn_chapter_2.h source/learn/learn_chapter_2.cpp headers/learn/learn_chapter_3.h source/learn/learn_chapter_3.cpp headers/practice/practice_chapter_2.h source/practice/practice_chapter_2.cpp source/practice/practice_chapter_3.cpp headers/practice/practice_chapter_3.h source/learn/learn_chapter_10.cpp headers/learn/learn_chapter_10.h source/learn/learn_chapter_8.cpp headers/learn/learn_chapter_8.h source/learn/learn_chapter_16.cpp headers/learn/learn_chapter_16.h headers/learn/learn_chapter_11.h source/learn/learn_chapter_11.cpp)
